add product to cart

--- a/src/app/containers/detail/detail.component.html
+++ b/src/app/containers/detail/detail.component.html
@@ -54,7 +54,7 @@
 
       <!-- Botones de compra -->
       <div class="section" style="padding-bottom:20px;">
-          <button class="btn btn-danger btn-block">Mua ngay</button>
+          <button class="btn btn-danger btn-block" (click)="buyNow()">Mua ngay</button>
       </div>                                        
   </div> 
   
