--- a/src/app/containers/shopping-cart/shopping-cart.component.html
+++ b/src/app/containers/shopping-cart/shopping-cart.component.html
@@ -1,22 +1,22 @@
 <h2 class="fs18 fw400 text-uppercase">Giỏ hàng</h2>
 <div class="row">
   <div class="col-12 col-md-8 col-xl-9">
-    <div class="card card-body deal-item">
+    <div *ngFor="let item of data" class="card card-body deal-item">
         <ul class="list-cart">
           <li class="shop-name">
-            <p class="fw500 mb-3">Máy tính Lanh Dung </p>
+            <p class="fw500 mb-3">{{item.seller}}</p>
           </li>
           <li class="inner-product row">
             <div class="product-thumb col-6 col-md-2">
               <img class="img-fluid" src="https://salt.tikicdn.com/cache/200x200/ts/product/97/89/e3/822949875175032e9a9f470937ad9019.jpg" alt="">
             </div>
             <div class="product-name col-6 col-md-8">
-              <a class="text-decoration-none text-dark" routerLink="/chi-tiet/man-hinh">Màn Hinh BenQ GW2283 22 Inch Full HD (1920 x 1080) 5ms 60Hz IPS Speaker 1W x 2 - Hàng Chính Hãng</a>  
-              <p class="  text-secondary fs13">Cung cấp bởi máy tính Lanh Dung</p>
-              <app-quantity-box></app-quantity-box>
+              <a class="text-decoration-none text-dark" routerLink="/chi-tiet/man-hinh">{{item.product_name}}</a>  
+              <p class="  text-secondary fs13">{{item.seller}}</p>
+              <app-quantity-box [quantityProduct]="item.quantity"></app-quantity-box>
             </div>
             <div class="product-content-price col-12 col-md-2">
-              <p class="fw500">2.350.000₫</p>
+              <p class="fw500">{{item?.price}}</p>
               <div class="d-flex">
                 <a class="fs12 mr-3">Xóa</a> 
                 <a class="fs12">Mua sau</a>
