--- a/src/app/shared/quantity-box/quantity-box.component.scss
+++ b/src/app/shared/quantity-box/quantity-box.component.scss
@@ -1,3 +1,13 @@
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 ul li input{
     width: 40px;
     font-size: 14px;
