--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,6 +1,6 @@
 <a class="quick-link-item" href="#">
   <div class="item-thumb">
-    <img src="https://salt.tikicdn.com/ts/upload/73/50/e1/83afc85db37c472de60ebef6eceb41a7.png" class="img-fluid" alt="">
+    <img src="{{avatar}}" (click)="searchProduct(id)" class="img-fluid" alt="{{name}}">
   </div>
-  <p>Mã giảm giá</p>
+  <p>{{name}}</p>
 </a>
