trang gio hang trong them anh va duong dan den trang chu

--- a/src/app/containers/shopping-cart/shopping-cart.component.scss
+++ b/src/app/containers/shopping-cart/shopping-cart.component.scss
@@ -18,6 +18,11 @@
     margin-top: 0;
 }
 
+.empty-thumb{
+    margin: auto;
+    width: 170px;
+}
+
 @media (max-width: 768px) {
     .product-content-price{
         align-items: flex-end;
