--- a/src/app/containers/shopping-cart/shopping-cart.component.html
+++ b/src/app/containers/shopping-cart/shopping-cart.component.html
@@ -1,5 +1,5 @@
 <h2 class="fs18 fw400 text-uppercase">Giỏ hàng</h2>
-<div class="row">
+<div *ngIf="data.length > 0" class="row">
   <div class="col-12 col-md-8 col-xl-9">
     <div *ngFor="let item of data" class="card card-body deal-item">
         <ul class="list-cart">
@@ -54,5 +54,19 @@
   </div>
 
   <button class="btn btn-danger btn-block mt-2">Thanh toán</button>
+  </div>
+</div>
+
+<div *ngIf="data.length === 0" class="row">
+  <div class="col-12">
+    <div class="card card-body">
+      <div class="empty-thumb">
+        <img class="img-fluid" src="../../../assets/imgs/mascot@2x.png" alt="">
+      </div>
+      <div class="empty-content text-center mt-5">
+        <p>Không có sản phẩm nào trong giỏ hàng của bạn</p>
+        <a routerLink="/" class="btn btn-warning">Tiếp tục mua sắm</a>
+      </div>
+    </div>
   </div>
 </div>
