--- a/src/app/containers/detail/detail.component.scss
+++ b/src/app/containers/detail/detail.component.scss
@@ -1,3 +1,7 @@
+.noti-cart-overlay{
+  position: relative;
+}
+
 ul > li {
   margin-right: 25px;
   font-weight: lighter;
@@ -110,7 +114,24 @@ div.section > div > input {
   flex-direction: row;
 }
 
+.noti-cart{
+  position: absolute;
+  inset: auto 0px 0px;
+  border: none;
+  background: rgb(255, 255, 255);
+  overflow: hidden;
+  border-radius: 15px 15px 0px 0px;
+  outline: none;
+  padding: 0px;
+}
+
 @media (max-width: 426px) {
+  .noti-cart-overlay{
+    position: fixed;
+    inset: 0px;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+  }
   .container {
     margin-top: 0px !important;
   }
