--- a/src/app/containers/detail/detail.component.html
+++ b/src/app/containers/detail/detail.component.html
@@ -150,7 +150,7 @@
         </div>
       </div>
     </div>
-<div class="noti-cart-overlay">
+<div *ngIf="showNotiCart" (click)="closeNotiCart()" class="noti-cart-overlay">
     <div class="d-lg-none noti-cart p-3">
       <div class="row">
         <div class="col-4">
@@ -166,7 +166,7 @@
           </div>
         </div>
         <div class="col-12">
-          <a class="btn btn-danger btn-block fs15 mt-3">Xem giỏ hàng</a>
+          <a routerLink="/gio-hang" class="btn btn-danger btn-block fs15 mt-3">Xem giỏ hàng</a>
         </div>
       </div>
     </div>
