--- a/src/app/containers/search-result/search-result.component.scss
+++ b/src/app/containers/search-result/search-result.component.scss
@@ -89,3 +89,16 @@
     margin-top: 10px;
 
 }
+
+@media (max-width: 768px) {
+    .nav-search{
+        height: 0px;
+        overflow: hidden;
+        transition: all 0.5s;
+    }
+    .show{
+        height: 415px;
+        transition: all 0.5s;
+
+    }
+}
