--- a/src/app/components/product/prod-list/prod-list.component.html
+++ b/src/app/components/product/prod-list/prod-list.component.html
@@ -16,6 +16,6 @@
   <div [ngbNavOutlet]="nav" class="mt-2"></div>
 
   <div class="d-flex justify-content-center p-3">
-    <button class="col-2 btn-view-more">Xem thêm</button>
+    <button class="col-md-2 col-6 btn-view-more">Xem thêm</button>
   </div>
 </div>
