--- a/src/app/containers/search-result/search-result.component.html
+++ b/src/app/containers/search-result/search-result.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body row">
-    <div class="col-12 col-md-3 col-xl-2 nav-search">
+    <div [ngClass]="isToggleFilter ? 'show' : ''" class="col-12 col-md-3 col-xl-2 nav-search">
       <div class="cate">
         <h4 class="title">Danh mục sản phẩm</h4>
         <ul class="nav-cate">
@@ -54,7 +54,9 @@
         </div>
         
       </div>
-
+    </div>
+    <div class="col-sm-12 d-md-none d-block">
+      <a (click)="showFilter()" class="btn btn-outline-primary float-right">Bộ lọc <i class='bx bx-filter-alt'></i></a>
     </div>
     <div class="col-12 col-md-9 col-xl-10">
       <h4 class="title-result">Kết quả tìm kiếm cho `key_word`: <span>0 kết quả</span></h4>
