--- a/src/app/shared/quantity-box/quantity-box.component.scss
+++ b/src/app/shared/quantity-box/quantity-box.component.scss
@@ -25,9 +25,12 @@ ul li:first-child, ul li:last-child{
     height: 30px;
 }
 
+ul li button{
+  border: none;
+  background-color: #F2F2F2;
+}
+
 ul li i{
-    padding: 6px;
-    background-color: #F2F2F2;
     color: #8A8A8A;
     cursor: pointer;
 }
