them product option id trong gio hang

--- a/src/app/containers/detail/detail.component.html
+++ b/src/app/containers/detail/detail.component.html
@@ -60,10 +60,7 @@
       </div>
       <div class="section mt-3">
         <h6 class="title-attr mb-2"><small>Số lượng</small></h6>
-        <app-quantity-box
-          [quantityProduct]="1"
-          (quantity)="quantityChange($event)"
-        ></app-quantity-box>
+        <app-quantity-box [quantityProduct]="1" (quantity)="quantityChange($event)"></app-quantity-box>
       </div>
 
       <!-- Botones de compra -->
