bugfix/ sua lai phan add san pham vao gio hang

--- a/src/app/containers/detail/detail.component.html
+++ b/src/app/containers/detail/detail.component.html
@@ -54,7 +54,7 @@
               [value]="item?.uid"
               [checked]="item?.uid == productOption?.uid"
             />
-            <label for="{{ item?.uid }}">{{ item?.size }}m</label>
+            <label for="{{ item?.uid }}">{{ item?.size }}</label>
           </ng-container>
         </div>
       </div>
