--- a/src/app/components/product/prod-item/prod-item.component.html
+++ b/src/app/components/product/prod-item/prod-item.component.html
@@ -20,9 +20,9 @@
     <a [routerLink]="['/chi-tiet/dong-ho']"  class="card product-item">
       <div class="card-body p-2">
         <div class="product-thumb">
-          <img class="img-fluid" src="https://salt.tikicdn.com/cache/280x280/ts/product/b8/8f/81/abdc074c7e4300c6f313fd5c4e10c2cd.jpg" alt="">
+          <img class="img-fluid" src="https://salt.tikicdn.com/cache/280x280/ts/product/14/8b/ba/29bd9f2e0707fc37cdb58d339ae81c90.jpg" alt="">
         </div>
-        <p class="product-name">Màn Hình The Space Samsung LS27R750QEEXXV ...</p>
+        <p class="product-name">Điện Thoại Samsung Galaxy S20 FE - Hàng Chính Hãng</p>
         <ngb-rating [rate]="3" [max]="5"></ngb-rating>
         <p class="product-price">
           7.490.000 ₫
