update product option id

--- a/src/app/containers/shopping-cart/shopping-cart.component.html
+++ b/src/app/containers/shopping-cart/shopping-cart.component.html
@@ -18,7 +18,7 @@
             <div class="product-content-price col-12 col-md-2">
               <p class="fw500 fs22">{{item?.price | number}}</p>
               <div class="d-flex">
-                <a (click)="removeProduct(item?.product_id)" class="fs12 mr-3">Xóa</a> 
+                <a (click)="removeProduct(item?.product_option_id)" class="fs12 mr-3 cursor-pointer">Xóa</a> 
                 <a class="fs12 d-none">Mua sau</a>
               </div>
             </div>
