--- a/src/app/containers/shopping-cart/shopping-cart.component.html
+++ b/src/app/containers/shopping-cart/shopping-cart.component.html
@@ -4,7 +4,7 @@
     <div *ngFor="let item of data" class="card card-body deal-item">
         <ul class="list-cart">
           <li class="shop-name">
-            <p class="fw500 mb-3"> {{item.seller}}</p>
+            <p class="fw500 mb-3 text-capitalize"> {{item.seller}} <i class='bx bxs-chevron-right' ></i></p>
           </li>
           <li class="inner-product row">
             <div class="product-thumb col-6 col-md-2">
