--- a/src/app/containers/shopping-cart/shopping-cart.component.html
+++ b/src/app/containers/shopping-cart/shopping-cart.component.html
@@ -33,7 +33,7 @@
     <div class="card card-body deal-item">
         <p class="fw500">Địa chỉ nhận hàng</p>
         <p class="fs14 fw500">Nguyễn Văn A  |  0969296543</p>
-        <p class="fs12 text-muted">Tòa nhà Sông Hồng ,Thái Hà , Đống Đa, Hà Nội</p>
+        <p class="fs12 text-muted">97-99 Láng Hạ - Đống Đa- Hà Nội</p>
     </div>
 
     <div class="card card-body mt-3 deal-item">
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <button class="btn btn-danger btn-block mt-2">Thanh toán</button>
+  <button (click)="createOrder()" class="btn btn-danger btn-block mt-2">Thanh toán</button>
   </div>
 </div>
 
