--- a/src/app/components/product/item/item.component.scss
+++ b/src/app/components/product/item/item.component.scss
@@ -16,6 +16,10 @@
     height: 48px;
 }
 
+.quick-link-item img{
+    border-radius: 15px;
+}
+
 .quick-link-item p{
     margin-top: 12px;
     text-align: center;
