--- a/src/app/components/product/prod-list/prod-list.component.html
+++ b/src/app/components/product/prod-list/prod-list.component.html
@@ -15,7 +15,7 @@
   
   <div [ngbNavOutlet]="nav" class="mt-2"></div>
 
-  <div class="d-flex justify-content-center p-3">
+  <div *ngIf="false" class="d-flex justify-content-center p-3">
     <button class="col-md-2 col-6 btn-view-more">Xem thêm</button>
   </div>
 </div>
