--- a/src/app/components/hight-lights/hight-lights.component.html
+++ b/src/app/components/hight-lights/hight-lights.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <p class="text-uppercase fs20 fw400 pb-3">Danh mục nổi bật</p>
     <div class="high-light-cate">
-      <app-item *ngFor="let row of listCategory" [avatar]="row['image']" [name]="row['name']" [id]="row['id']"></app-item>
+      <app-item *ngFor="let item of listCategory" [avatar]="item['image']" [name]="item['name']" [id]="item['uid']"></app-item>
     </div>
   </div>
 </div>
