--- a/src/app/components/product/prod-item/prod-item.component.html
+++ b/src/app/components/product/prod-item/prod-item.component.html
@@ -16,17 +16,17 @@
 
 
 <div *ngIf="searchResult" class="row">
-  <div *ngFor="let item of data" class="col-6 col-sm-4 col-md-3 p-0">
-    <a [routerLink]="['/chi-tiet/dong-ho']"  class="card product-item">
+  <div *ngFor="let item of products" class="col-6 col-sm-4 col-md-3 p-0">
+    <a [routerLink]="['/chi-tiet/'+ item.linkName]"  class="card product-item">
       <div class="card-body p-2">
         <div class="product-thumb">
-          <img class="img-fluid" src="https://salt.tikicdn.com/cache/280x280/ts/product/14/8b/ba/29bd9f2e0707fc37cdb58d339ae81c90.jpg" alt="">
+          <img class="img-fluid" [src]="item.image" alt="">
         </div>
-        <p class="product-name">Điện Thoại Samsung Galaxy S20 FE - Hàng Chính Hãng</p>
-        <ngb-rating [rate]="3" [max]="5"></ngb-rating>
+        <p class="product-name">{{item?.name}}</p>
+        <!-- <ngb-rating [rate]="3" [max]="5"></ngb-rating> -->
         <p class="product-price">
-          7.490.000 ₫
-          <span class="product-discount">-10%</span>
+          {{item?.price | number}}₫
+          <span class="product-discount d-none">-10%</span>
         </p>
       </div>
     </a>
