--- a/src/app/shared/search-box/search-box.component.html
+++ b/src/app/shared/search-box/search-box.component.html
@@ -1,2 +1,2 @@
-<input type="text" placeholder="Tìm sản phẩm, danh mục hay thương hiệu mong muốn ..." style="width:100%">
-<button (click)="search()" class="btn "><i class='bx bx-search-alt'></i> &nbsp; <span class="fs12">Tìm kiếm</span></button>
+<input #keyword type="text" placeholder="Tìm sản phẩm, danh mục hay thương hiệu mong muốn ..." style="width:100%">
+<button (click)="search(keyword.value)" class="btn "><i class='bx bx-search-alt'></i> &nbsp; <span class="fs12">Tìm kiếm</span></button>
