Responsive header and home page

--- a/src/app/components/hot-deal/hot-deal.component.html
+++ b/src/app/components/hot-deal/hot-deal.component.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="hot-deal-body">
-    <div *ngFor="let item of data" class="deals-item bg-white col-3 col-md-2">
+    <div *ngFor="let item of data" class="deals-item bg-white col-5 col-sm-3 col-md-2">
       <div class="deals-thumb">
         <span class="deals-discount">-99%</span>
         <img src="https://salt.tikicdn.com/cache/280x280/ts/product/b2/c6/51/b96b6ed75876b6ddda71504bcf82186a.jpg" class="img-fluid" alt="">
