--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -55,3 +55,13 @@
     </div>
   </div>
 </section>
+
+<section class="header-sm">
+  <div class="logo-sm">
+    <img class="img-fluid" src="https://salt.tikicdn.com/ts/upload/d4/ca/89/28d85ed27396c1beebad8a3fec18bfe4.png" alt="">
+  </div>
+  <!-- <app-search-box></app-search-box> -->
+  <div class="search-box col-12 mt-2">
+    <input type="text" placeholder="Ban tim gi hom nay?" style="width: 100%;">
+  </div>
+</section>
