--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,4 +1,4 @@
-.header-lg{
+.header-lg, .header-sm{
     background-color: #017FFF;
     display: block;
 }
@@ -51,6 +51,19 @@
     font-size: 11px;
     margin-right: 8px;
     text-decoration: none;
+}
+
+
+
+// header sm
+.header-sm{
+    height: 100px;
+}
+.logo-sm{
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    padding-top: 15px;
 }
 
 .dropNotifyCart{
