update reponsive header and home page

--- a/src/app/containers/home/home.component.scss
+++ b/src/app/containers/home/home.component.scss
@@ -12,7 +12,14 @@
 }
 
 @media (max-width: 992px) {
-    .banner{
+
+    .banner .banner-right{
         display: none;
+    }
+
+    .banner{
+        display: block;
+        height: auto;
+        margin-top: 105px;
     }
 }
