--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,6 +1,5 @@
 .header-lg, .header-sm{
     background-color: #017FFF;
-    display: block;
 }
 
 .header-lg .container {
@@ -57,7 +56,7 @@
 
 // header sm
 .header-sm{
-    height: 100px;
+    display: none;
 }
 .logo-sm{
     width: 50px;
@@ -66,13 +65,26 @@
     padding-top: 15px;
 }
 
+.cart-sm{
+    position: relative;
+}
+
 .dropNotifyCart{
     width: 300px;
 }
 
 
-@media (max-width: 992px) {
+
+@media only screen and (max-width: 992px) {
     .header-lg{
         display: none;
+    }
+
+    .header-sm{
+        display: block;
+        height: 110px;
+        position: fixed;
+        width: 100%;
+        z-index: 1;
     }
 }
